--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 asn1crypto==0.24.0
 attrs==19.1.0
 Automat==0.7.0
+certifi==2019.6.16
 cffi==1.12.3
+chardet==3.0.4
 constantly==15.1.0
 cryptography==2.7
 cssselect==1.0.3
+dill==0.3.0
 hyperlink==19.0.0
 idna==2.8
 incremental==17.5.0
+joblib==0.13.2
 lxml==4.3.4
+marisa-trie==0.7.5
 mysql-connector==2.2.9
+nltk==3.4.3
+numpy==1.16.4
+pandas==0.24.2
 parsel==1.5.1
+progressbar==2.5
 pyasn1==0.4.5
 pyasn1-modules==0.2.5
 pycparser==2.19
@@ -18,10 +27,21 @@ PyDispatcher==2.0.5
 PyHamcrest==1.9.0
 pymongo==3.8.0
 pyOpenSSL==19.0.0
+pythainlp==2.0.6
+python-dateutil==2.8.0
+pytz==2019.1
 queuelib==1.5.0
+requests==2.22.0
+scikit-learn==0.21.2
+scipy==1.3.0
 Scrapy==1.6.0
 service-identity==18.1.0
 six==1.12.0
+sklearn==0.0
+stop-words==2018.7.23
+tinydb==3.13.0
+tqdm==4.32.2
 Twisted==19.2.1
+urllib3==1.25.3
 w3lib==1.20.0
 zope.interface==4.6.0
